# project-doc-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  generate_docstrings.py  generate_documentation.py  project_doc_agent.py  pyproject.toml  system_prompts.py  test_module.py
config/: config.yaml  logger.py
llm_clients/: lmstudio_client.py
models/: base.py  registry.py
models/clients/: lmstudio_client.py
src/models/: registry.py
src/models/clients/: lmstudio_client.py
src/parser/: module_metadata_extractor.py  module_reader.py  tree_docstring_transformer.py  tree_metadata_collector.py
src/schemas/: module_metadata.py  object_metadata.py
src/utils/: initialize_llm.py
system_prompts/: architecture.md  class_docstring.md  docstring.md  function_docstring.md  metadata.md  module_docstring.md  module_summary.md  package_summary.md  readme.md
tests/: test_discovery.py  test_insertion.py
user_prompts/: README_BRIEF.md
