[project]
name = "project-doc-agent"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "libcst>=1.8.6",
    "openai>=2.41.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
